fix menu on mobile and remove talkus plugin

--- a/source/stylesheets/_base.scss
+++ b/source/stylesheets/_base.scss
@@ -210,6 +210,10 @@ a { color: $primary-color; &:visited { color: rgba($primary-color, 0.5) }}
       &:hover > span {
         transform: translateY(-100%);
       }
+
+      @include phone {
+        width: 100%;
+      }
     }
   }
 }
@@ -558,7 +562,7 @@ a { color: $primary-color; &:visited { color: rgba($primary-color, 0.5) }}
     }
 
     .menu-content {
-      padding: 50px 0;
+      padding: 110px 0;
     }
 
     .social-info {
@@ -585,11 +589,6 @@ a { color: $primary-color; &:visited { color: rgba($primary-color, 0.5) }}
       padding: 10rem 0;
     }
   }
-}
-
-#talkus-button {
-  bottom: 30px !important;
-  right: 85px !important;
 }
 
 @include screen($small-screen, 1280px){
